5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1846_1275.log
== TEST (2019-06-22 14:58:55) 
-- CODE:
from numpy import *
from numpy.linalg *
m=array[eval(input())]
n=shape(m)[0]
z=zeros((n,7), dtype=int)



-- ERROR:
File "XXXX", line 2
    from numpy.linalg *
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:59:14) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array[eval(input())]
n=shape(m)[0]
z=zeros((n,7), dtype=int)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:59:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array[eval(input())]
n=shape(m)[0]
z=zeros((n,7), dtype=int)
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:01:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array([eval(input())])
n=shape(m)[0]
z=zeros((n,7), dtype=int)
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:07:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
n=shape(m)[0]
z=zeros((n,7), dtype=int)
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:09:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
n=shape(m)[0]
z=zeros((n,7), dtype=int)
print(m[2,2])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:10:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
n=shape(m)[0]
z=zeros((n,7), dtype=int)
print(m[1,0])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:02:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
soma=0
for i in range(l):
	for j range(6):
		z[i]=z[i]+n[i,j]
print(z)


-- ERROR:
File "XXXX", line 8
    for j range(6):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:02:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
soma=0
for i in range(l):
	for j in range(6):
		z[i]=z[i]+n[i,j]
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:03:17) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
soma=0
for i in range(l):
	for j in range(6):
		z[i]=z[i]+m[i,j]
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:04:11) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
soma=0
for i in range(l):
	for j in range(6):
		z[i]=z[i]+m[i,j]
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:04:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
soma=0
for i in range(l):
	for j in range(6):
		z[i]=z[i]+m[i,j]
print(z)


-- EXECUTION TIME:
1.13401
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[26 41 30 34 25 27 36 38 24 23 40 28 32 22 35 13]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[23 25 34 29 26 24 37 33 29 30 22 12 28 29 33 28 32 22 19 21 12]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[17 26 32 19 29 43 33 35 31 32 31 35 38 35 29 28 15 26 27 18 23 38 36 25
 28 18 37]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:05:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
soma=0
for i in range(l):
	for j in range(6):
		z[i]=z[i]+m[i,j]
print(z)


-- EXECUTION TIME:
1.12405
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[26 41 30 34 25 27 36 38 24 23 40 28 32 22 35 13]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[23 25 34 29 26 24 37 33 29 30 22 12 28 29 33 28 32 22 19 21 12]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[17 26 32 19 29 43 33 35 31 32 31 35 38 35 29 28 15 26 27 18 23 38 36 25
 28 18 37]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:05:48) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for i in range(l):
	for j in range(6):
		z[i]=z[i]+m[i,j]
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:06:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for i in range(l):
	for j in range(6):
		z[i]=z[i]+m[i,j]
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:07:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for i in range(l):
	for j in range(7):
		z[i]=z[i]+m[i,j]
print(z)


-- EXECUTION TIME:
1.08799
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
Matriz: [35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
Matriz: [26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
Matriz: [20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:07:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for i in range(l):
	for j in range(7):
		z[i]=z[i]+m[i,j]
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:07:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for i in range(l):
	for j in range(7):
		z[i]=z[i]+m[i,j]
print(z)


-- EXECUTION TIME:
1.12833
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
Matriz: [26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
Matriz: [20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:08:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
m=array(eval(input("Matriz: ")))
l=shape(m)[0]
z=zeros(l, dtype=int)
for i in range(l):
	for j in range(7):
		z[i]=z[i]+m[i,j]
print(z)


-- EXECUTION TIME:
1.1361
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
